11. "Receive your digital currency" tracker graphics is too wide - fixed

--- a/src/app.scss
+++ b/src/app.scss
@@ -660,6 +660,12 @@ header.bg-gradient {
     border: 1px solid #E8EAEB;
 }
 
+.tracking-section {
+    .transaction-row {
+        width: 461px;
+    }
+}
+
 .btn-back {
     background: none;
     border: none;
